k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: mvc-app
  namespace: development
spec:
  replicas: 1

  selector:
    matchLabels:
      app: mvc-app

  template:
    metadata:
      labels:
        app: mvc-app

    spec:
      containers:
      - name: mvc-app

        image: acrforaks01.azurecr.io/mvc-app-net10:1.0.0

        ports:
        - containerPort: 8080
