k8s/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: mvc-app-service
  namespace: development

spec:
  selector:
    app: mvc-app

  ports:
  - port: 80
    targetPort: 8080

  type: LoadBalancer
